2003-08-20  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-calendar-table.c (setup_popup_icons): new function to set icons
	on the popup menu items.
	(e_calendar_table_show_popup_menu): call setup_popup_icons.

	* gui/e-cal-view.c (setup_popup_icons): set more icons for the
	popup menu.

2003-08-20  Bolian Yin <bolian.yin@sun.com>

	* gui/Makefile.am : Add a11y dependency.
	* gui/calendar-commands.c (calendar_get_text_for_folder_bar_label)
	* gui/e-cal-view.c: Add two new events: "event_changed" and "event_added" 
	* gui/e-day-view.c (e_day_view_class_init): init a11y.
	  (e_day_view_find_event_from_item): make it public from private
	  (e_day_view_update_event_cb): emit "event_changed" signal
	  (e_day_view_reshape_day_event): emit "event_added" signal
	  (e_day_view_reshape_long_event): emit "event_added" signal
	* gui/e-week-view.c (e_week_view_class_init): init a11y.
	  (e_week_view_find_event_from_item): make it public from private
	  (e_week_view_update_event_cb): emit "event_changed" signal
	  (e_week_view_reshape_event_span): emit "event_added" signal
	* gui/gnome-cal.c (gnome_calendar_class_init): init a11y.
	  (gnome_calendar_get_e_calendar_widget),
	  (gnome_calendar_get_search_bar_widget),
          (gnome_calendar_get_view_notebook_widget): new functions

2003-08-19  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model-tasks.c (ecmt_get_color_for_component): use
	"black" for normal tasks, since the light colors from the palette
	are too light.

	* gui/gnome-cal.c (gnome_calendar_purge): don't leak the client list.
	(gnome_calendar_destroy): disconnect from all callbacks on all
	loaded clients.

2003-08-18  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c: fixed the problem with a new event being
	created for each keystroke.
	(e_day_view_add_event): don't create a new default component, use
	the one we get as parameter.
	(e_day_view_do_key_press): get the UID from the icalcomponent.
